--- a/cfg/config.json
+++ b/cfg/config.json
@@ -1,54 +1,24 @@
 {
-    "env":{
-        "test":{
-            "srv": {
-                "port": 3003,
-                "host": "localhost",
-                "protocol": "http",
-                "module": {
-                    "load" : [
-                        "etl"
-                    ]
-                }
-            },
-            "app": {
-                "db":{
-                    "name": "tropipay-test",
-                    "host": "localhost",
-                    "port": "27017",
-                    "driver": "mongodb"
-                }
-            }
-        },
-        "production":{
-            "srv": {
-                "port": 3000,
-                "host": "localhost",
-                "protocol": "http",
-                "log": 1,
-                "module": {
-                    "load" : [
-                        "etl",
-                        "graph"
-                    ]
-                },
-                "route":{
-                    "/":{
-                        "method": "get",
-                        "module": "etl",
-                        "controller": "DefaultController",
-                        "action": "home"
-                    }
-                }
-            },
-            "app": {
-                "db":{
-                    "name": "tropipay",
-                    "host": "localhost",
-                    "port": "27017",
-                    "driver": "mongodb"
-                }
-            }
+    "development": {
+        "port": "5432",
+        "host": "127.0.0.1",
+        "database": "apiheroku",
+        "username": "postgres",
+        "password": "postgres",
+        "dialect": "postgres",
+        "protocol": "postgres"
+    },
+    "production": {
+        "url": "DATABASE_URL",
+        "dialect": "postgres",
+        "dialectOptions": {
+            "ssl": true
         }
+    },
+    "test": {
+        "dialect": "sqlite",
+        "protocol": "sqlite",
+        "storage": ":memory:",
+        "logging": false
     }
 }
