--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
-  "name": "datawarehouse",
+  "name": "api.heroku",
   "version": "1.0.0",
-  "description": "datawarehouse",
+  "description": "api.heroku",
   "scripts": {
+    "test": "jest",
     "start": "node ./src/app/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:migrate:status": "npx sequelize-cli db:migrate:status",
+    "heroku-postbuild": "node_modules/.bin/sequelize db:migrate"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tropipay/datawarehouse.git"
+    "url": "git+https://github.com/apiheroku.git"
   },
   "keywords": [
     "datawarehouse"
   ],
   "author": "TropiPay",
-  "license": "ISC",
+  "license": "TropiPay",
   "bugs": {
-    "url": "https://github.com/tropipay/datawarehouse/issues"
+    "url": "https://github.com/apiheroku/issues"
   },
-  "homepage": "https://github.com/tropipay/datawarehouse#readme",
+  "homepage": "https://github.com/apiheroku#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-auto-migrations": "^1.0.2",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
   }
 }
