--- a/cfg/config.json
+++ b/cfg/config.json
@@ -9,10 +9,12 @@
         "protocol": "postgres"
     },
     "production": {
-        "url": "DATABASE_URL",
+        "use_env_variable": "DATABASE_URL",
         "dialect": "postgres",
         "dialectOptions": {
-            "ssl": true
+            "ssl": {
+                "rejectUnauthorized": false
+             }
         }
     },
     "test": {
