--- a/cfg/config.json
+++ b/cfg/config.json
@@ -2,7 +2,7 @@
     "development": {
         "port": "5432",
         "host": "127.0.0.1",
-        "database": "apiheroku",
+        "database": "demo",
         "username": "postgres",
         "password": "postgres",
         "dialect": "postgres",
