--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "datawarehouse",
+  "name": "api.heroku",
   "version": "1.0.0",
-  "description": "datawarehouse",
+  "description": "api.heroku",
   "scripts": {
     "test": "jest",
     "start": "node ./bin/server.js",
@@ -12,17 +12,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tropipay/datawarehouse.git"
+    "url": "git+https://github.com/ameksike/api.heroku.git"
   },
   "keywords": [
-    "datawarehouse"
+    "api.heroku"
   ],
   "author": "TropiPay",
   "license": "TropiPay",
   "bugs": {
-    "url": "https://github.com/tropipay/datawarehouse/issues"
+    "url": "https://github.com/ameksike/api.heroku/issues"
   },
-  "homepage": "https://github.com/tropipay/datawarehouse#readme",
+  "homepage": "https://github.com/ameksike/api.heroku#readme",
   "dependencies": {
     "base-64": "^1.0.0",
     "body-parser": "^1.19.0",
@@ -35,6 +35,7 @@
     "sequelize": "^6.6.2",
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^5.5.0",
+    "ioredis": "^4.17.3",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
     "jsonapi-serializer": "^3.6.4",
