--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "jsonwebtoken": "^8.3.0",
     "otplib": "^12.0.1",
     "sha1": "^1.1.1",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "ksdp": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
