--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "db:migrate:status": "npx sequelize-cli db:migrate:status",
+    "db:migrate:generate": "npx sequelize-cli migration:generate --name",
+    "db:migration:generate": "npx sequelize-cli migration:generate --name",
     "heroku-postbuild": "node_modules/.bin/sequelize db:migrate"
   },
   "repository": {
@@ -26,23 +28,27 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.2",
-    "sequelize-auto-migrations": "^1.0.2",
-    "sequelize-cli": "^5.5.0",
     "ioredis": "^4.17.3",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
     "jsonapi-serializer": "^3.6.4",
     "jsonwebtoken": "^8.3.0",
+    "ksdp": "^1.0.0",
+    "ksmf": "^1.0.7",
+    "md5": "^2.2.1",
+    "node-cron": "^3.0.0",
     "otplib": "^12.0.1",
-    "sha1": "^1.1.1",
-    "md5": "^2.2.1"
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.2",
+    "sequelize-auto-migrations": "^1.0.2",
+    "sequelize-cli": "^5.5.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
